Attempt at fixing Index overflow (failed)

--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,8 @@ div.default_svg img {
 }
 
 .svg_animation {
-  position: absolute;
+  position: absolute !important;
+  overflow:hidden !important;
   top: 80vh;
   left: 45vw;
   width: 10px;
@@ -160,6 +161,7 @@ div.default_svg img {
   transform-origin: top left;
   transform: scale(0) rotate(0deg) translate(-50%, -50%);
   animation: svg_animation 12s ease-in forwards infinite;
+
 }
 
 
@@ -214,6 +216,7 @@ div.default_svg img {
   }
 }
 
+/*  BEEANANNNNSNSNSSSS  */
 @keyframes svg_animation {
   0% {
     transform: scale(0) rotate(0deg) translate(-50%, -50%) translateX(2px);
@@ -229,6 +232,7 @@ div.default_svg img {
     opacity: 0;
   }
 }
+
 
 .bg-dark-coffee {
   background-color: #3C2F2F !important;
